Create SINASC parser

--- a/.misc/scripts/dbc2csv/docker-compose.yml
+++ b/.misc/scripts/dbc2csv/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     image: pydemic/dbc2csv
     command: make
     volumes:
-      - ./dbcs:/usr/src/app/data
+      - ../../sandbox/dbcs:/usr/src/app/data
