--- a/assets/package.json
+++ b/assets/package.json
@@ -24,7 +24,7 @@
     "file-loader": "^6.1.1",
     "hard-source-webpack-plugin": "^0.13.1",
     "leaflet": "^1.7.1",
-    "mini-css-extract-plugin": "^1.2.0",
+    "mini-css-extract-plugin": "0.9.0",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.2.4",
