--- a/assets/package.json
+++ b/assets/package.json
@@ -1,7 +1,5 @@
 {
-  "repository": {},
-  "description": " ",
-  "license": "MIT",
+  "private": true,
   "scripts": {
     "deploy": "NODE_ENV=production webpack --mode production",
     "watch": "webpack --mode development --watch"
@@ -19,12 +17,11 @@
     "autoprefixer": "^10.2.3",
     "babel-loader": "^8.1.0",
     "chart.js": "^2.9.4",
-    "copy-webpack-plugin": "^6.2.1",
+    "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.0",
     "file-loader": "^6.1.1",
-    "hard-source-webpack-plugin": "^0.13.1",
     "leaflet": "^1.7.1",
-    "mini-css-extract-plugin": "0.9.0",
+    "mini-css-extract-plugin": "^1.3.6",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.2.4",
@@ -33,7 +30,7 @@
     "sass-loader": "^10.0.4",
     "tailwindcss": "^2.0.2",
     "terser-webpack-plugin": "^2.3.2",
-    "webpack-cli": "^3.3.2",
-    "webpack": "4.41.5"
+    "webpack-cli": "^4.5.0",
+    "webpack": "^5.21.2"
   }
 }
