--- a/assets/package.json
+++ b/assets/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "deploy": "NODE_ENV=production webpack --mode production",
+    "deploy": "webpack --mode production",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
@@ -22,12 +22,10 @@
     "file-loader": "^6.1.1",
     "leaflet": "^1.7.1",
     "mini-css-extract-plugin": "^1.3.6",
-    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.2.4",
     "postcss-import": "^14.0.0",
     "postcss-loader": "^4.2.0",
-    "sass-loader": "^10.0.4",
     "tailwindcss": "^2.0.2",
     "terser-webpack-plugin": "^2.3.2",
     "webpack-cli": "^4.5.0",
