--- a/assets/package.json
+++ b/assets/package.json
@@ -21,11 +21,13 @@
     "css-loader": "^5.0.0",
     "file-loader": "^6.1.1",
     "leaflet": "^1.7.1",
+    "leaflet.fullscreen": "^2.0.0",
     "mini-css-extract-plugin": "^1.3.6",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.2.4",
     "postcss-import": "^14.0.0",
     "postcss-loader": "^4.2.0",
+    "screenfull": "^5.1.0",
     "tailwindcss": "^2.0.2",
     "terser-webpack-plugin": "^2.3.2",
     "webpack-cli": "^4.5.0",
